fix: overflowing in mobile version

--- a/profile card/style.css
+++ b/profile card/style.css
@@ -4,7 +4,7 @@
 .attribution a { color: hsl(228, 45%, 44%); }
 body{
     background-color:hsl(185, 75%, 39%);
-   
+    margin:0;
    /* height:100vh;
     width:100vw;*/
     overflow:hidden;
@@ -127,7 +127,13 @@ color:rgb(121, 121, 121);
     background-color: white;
     border-radius: 0 0 1rem 1rem;
   
+}
+    .bodywrapper{
 
+        width:100vw;
+        height:100vh;
+        position:relative;
+       overflow:hidden;
 }
 @media screen and (max-width:450px){
     .card{
